Fixed cannot open selector nav on IE6 and IE7. BugzID #102561

--- a/mt-static/css/hacks/ie.css
+++ b/mt-static/css/hacks/ie.css
@@ -93,6 +93,11 @@ button.action {
     z-index: 1100;
 }
 
+/* - Menu Bar Nav */
+#menu-bar-nav { 
+    width: 250px;
+}
+
 ul.menu-nav, 
 ul.submenu, 
 ul.submenu li, 
